--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>ProjectBrok | Home</title>
   </head>
   <body>
-    <button>About</button>
-    <button>Social</button>
+    <button><a href="/about.html">About</a></button>
+    <button><a href="/social.html">Social</a></button>
     <br>
     <h1>ProjectBrok</h1>
     <br>
