--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <button><a href="/about.html">About</a></button>
     <button><a href="/social.html">Social</a></button>
+    <button><a href="/courses.html">Courses</a></button>
     <br>
     <h1>ProjectBrok</h1>
     <br>
