--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <body>
     <button><a href="/index.html">Home</a></button>
     <button><a href="/social.html">Social</a></button>
+    <button><a href="/courses.html">Courses</a></button>
     <br>
     <h1>ProjectBrok | About</h1>
     <br>
