--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <br>
     <h1>ProjectBrok</h1>
     <br>
-    <p>Website Under Construction!</p>
+    <p>Hello and Welcome to the Official ProjectBrok Website! Here we offer a bunch of high quality courses of any topic!</p>
+    <br>
+    <p>If you would like to see more about us, make sure to go to our About page!<p>
   </body>
 </html>
