--- a/about.html
+++ b/about.html
@@ -10,6 +10,6 @@
     <br>
     <h1>ProjectBrok | About</h1>
     <br>
-    <p>About Under Construction!</p>
+    <p>Hello! And Welcome to the About Page. This is probably the first time you’re seeing about our company, and you might ask, “Well, what is this Company about?”. Here at ProjectBrok we make quality courses about any topic.</p>
   </body>
 </html>
